fix: overflow hidden

--- a/src/index.css
+++ b/src/index.css
@@ -8,4 +8,5 @@
 }
 body{
     font-family: 'Poppins';
+    overflow-x: hidden;
 }
